# fungi-mycel

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  INSTALLATION.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  generate_reports.sh  netlify.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_import.py
docs/: FUNGI-MYCEL_Research_Paper.docx
reports/: 2026-02-27_dashboard.html  status_summary.txt
reports/alerts/critical/: 2026-02-27_caledonian-03_alert.md  2026-02-27_sudbury-01_alert.md
reports/alerts/high/: 2026-02-27_amazon-02_alert.md  2026-02-27_boreal-05_alert.md  2026-02-27_mediterranean-03_alert.md
reports/alerts/medium/: 2026-02-27_temperate-08_alert.md
reports/daily/2026-02/: 2026-02-27_daily_report.md  2026-02-27_daily_report.txt
reports/json/processed/: 2026-02-27_full_status.json  2026-02-27_status_summary.json
reports/json/raw/: 2026-02-27_site_data.json
scripts/: generate_daily_reports.sh
src/fungi_mycel/: __init__.py  core.py
src/fungi_mycel/cli/: __init__.py  main.py
src/fungi_mycel/io/: __init__.py  exporters.py  loaders.py
src/fungi_mycel/models/: __init__.py  ensemble.py
src/fungi_mycel/parameters/: abi.py  bfs.py  e_a.py  eta_nw.py  grad_c.py  k_topo.py  rho_e.py  ser.py
src/fungi_mycel/utils/: __init__.py  constants.py  helpers.py
src/fungi_mycel/visualization/: __init__.py  dashboard.py  plots.py
tests/: conftest.py  run_tests.sh
tests/benchmarks/: test_prediction_speed.py
tests/hypothesis/: test_hypotheses.py
tests/integration/: test_pipeline.py
tests/reports/alerts/critical/: 2026-02-27_sudbury-01_alert.md
tests/reports/alerts/high/: 2026-02-27_amazon-02_alert.md
tests/reports/daily/2026-02/: 2026-02-27_daily_report.md  2026-02-27_daily_report.txt
tests/reports/json/raw/: 2026-02-27_site_data.json
tests/unit/: test_core.py  test_parameters.py
