# FUNGI-MYCEL setup.cfg
# Framework for Mycelial Network Intelligence Assessment

[metadata]
name = fungi-mycel
version = 1.0.0
url = https://fungi-mycel.netlify.app
project_urls =
    Documentation = https://fungi-mycel.readthedocs.io
    Source = https://gitlab.com/gitdeeper07/fungi-mycel
    GitHub = https://github.com/gitdeeper07/fungi-mycel
    Bug Tracker = https://gitlab.com/gitdeeper07/fungi-mycel/-/issues
    DOI = https://doi.org/10.14293/FUNGI-MYCEL.2026.001
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = FUNGI-MYCEL: A Quantitative Framework for Decoding Mycelial Network Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    mycology,
    fungal-intelligence,
    mycelial-networks,
    bioelectricity,
    wood-wide-web,
    mycorrhiza,
    ecology,
    machine-learning,
    neural-networks,
    fractal-geometry,
    soil-science,
    environmental-monitoring,
    ecosystem-resilience
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Ecology
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    matplotlib>=3.5.0
    pyyaml>=5.4.0
    click>=8.0.0

[options.packages.find]
where = src
exclude =
    tests
    docs
    examples
    notebooks
    scripts

[options.extras_require]
ml =
    tensorflow>=2.8.0
    torch>=1.10.0
    xgboost>=1.6.0
viz =
    plotly>=5.5.0
    seaborn>=0.11.0
dev =
    pytest>=7.0.0
    black>=23.0.0
    ruff>=0.0.260
    mypy>=1.0.0
    pre-commit>=3.0.0
all =
    %(ml)s
    %(viz)s
    %(dev)s

[options.entry_points]
console_scripts =
    fungi-mycel = fungi_mycel.cli:main
